2010-10-07  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* src/Resize3DImage.cxx

	- After asking in the ITK user mailing list, Dan Mueller suggested
	using IdentityTransform. I started looking, and found that there's
	actually an example on how to decimate in ITK, in
	Examples/Filtering/SubsampleVolume.cxx. I adapted the code, and
	figured out how to scale the sigma value of the low-pass filter to
	get a similar result to the Resample tool in Seg3D.

2010-07-15  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add src/Resize3DImage.cxx

	- Start adding program to resize an image volume, trying an
	approach of ScaleTransform to resize the image. This is not
	working very well, because there's no Gaussian filtering, and the
	coordinate frame is changed. I'm going to switch to using
	MultiResolutionPyramidImageFilter, but before I'm commiting the
	code in case I need to roll back.

2010-06-14  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* src/Rotate3DImage.cxx:

	- Attempt to recompute the image resolution when the image is
	rotated. Imagine we have a 2D image with 1x2 resolution, and
	rotate it 90º. With the current code, the rotated image would
	still have 1x2 resolution, but it would make sense that it changes
	to 2x1. Anyway, I need to test the new code, and have no time now,
	so I'm leaving the code commented out to work on it later.

2010-03-04  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* src/Rotate3DImage.cxx:

	- Reorder input arguments, so that now filename is at the
	end. This way, we can use xargs on the shell and rotate a
	list of files.

	- Major bug fix. Input transformation was all mixed up. Now the
	input transformation is expected to be in the intuitive
	direction. For example, if you want to rotate the volume 30º
	clockwise, your transformation should rotate the Cartesian system
	30º clockwise too.

	- Add input argument to select autocrop, so that the output volume
	will tightly enclose the selected voxels in a segmentation mask,